# loan-risk-predictor

./: CONTRIBUTING.md  README.md  poetry_add.ps1  pyproject.toml  requirements.txt  risk_flag.ipynb  run.ps1
__pycache__/graph/: graph.ipynb
graph/: graph.ipynb  risk_flag.ipynb
src/: __init__.py  app.py  gui.py  main.py
src/config/: config.py
src/data/: data_repository.py
src/models/: autoencoder.py  base_model.py  cnn_lightgbm_model.py  d_lstm_model.py  dnn_model.py  mlp_model.py  model_factory.py  random_forest_model.py  rnn_model.py  xgboost_model.py
src/utils/: feature_engineering.py  logger.py  test_utils.py
